@@ -5,23 +5,28 @@ import io.bootify.vcore.model.ArtstyleType;
 import io.bootify.vcore.model.CommissionRequestDTO;
 import io.bootify.vcore.model.CommissionType;
 import io.bootify.vcore.repos.CommissionRepository;
-import io.bootify.vcore.rest.ResourceNotFoundException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
+import org.mockito.Mockito;
+import org.springframework.mail.SimpleMailMessage;
 import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
+import org.junit.jupiter.api.Assertions;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
-class CommissionServiceTest {
+public class CommissionServiceTest {
 
     private CommissionRepository commissionRepository;
     private JavaMailSender mailSender;
@@ -29,20 +34,15 @@ class CommissionServiceTest {
     private CommissionService commissionService;
 
     @BeforeEach
-    void setup() {
+    public void setup() {
         commissionRepository = mock(CommissionRepository.class);
         mailSender = mock(JavaMailSender.class);
         messagingTemplate = mock(SimpMessagingTemplate.class);
-
-        commissionService = new CommissionService(
-                commissionRepository,
-                mailSender,
-                messagingTemplate
-        );
+        commissionService = new CommissionService(commissionRepository, mailSender, messagingTemplate);
     }
 
     @Test
-    void createCommissionShouldSaveCommissionAndReturnDto() {
+    public void testCreateCommission() {
         CommissionRequestDTO dto = new CommissionRequestDTO();
         dto.setSenderName("Test User");
         dto.setSenderEmail("test@example.com");
@@ -50,157 +50,95 @@ class CommissionServiceTest {
         dto.setArtstyleType(ArtstyleType.SKETCH);
         dto.setAdditionalNotes("Test notes");
 
-        when(commissionRepository.save(any(CommissionRequest.class)))
-                .thenAnswer(invocation -> {
-                    CommissionRequest savedCommission = invocation.getArgument(0);
-                    savedCommission.setId(1L);
-                    return savedCommission;
-                });
+        when(commissionRepository.save(any(CommissionRequest.class))).thenAnswer(inv -> {
+            CommissionRequest arg = inv.getArgument(0);
+            arg.setId(1L);
+            return arg;
+        });
 
         CommissionRequestDTO result = commissionService.createCommission(dto);
 
-        assertEquals(1L, result.getId());
-        assertEquals("Test User", result.getSenderName());
-        assertEquals("test@example.com", result.getSenderEmail());
-        assertEquals(CommissionType.HALFBODY, result.getCommissionType());
-        assertEquals(ArtstyleType.SKETCH, result.getArtstyleType());
-        assertEquals("Test notes", result.getAdditionalNotes());
-
         verify(commissionRepository, times(1)).save(any(CommissionRequest.class));
+        verify(messagingTemplate, times(1)).convertAndSend(eq("/topic/commissions"), any(CommissionRequestDTO.class));
+
+        assertEquals("Test User", result.getSenderName());
+        assertEquals(1L, result.getId());
     }
 
     @Test
-    void createCommissionShouldSaveCorrectEntityValues() {
-        CommissionRequestDTO dto = new CommissionRequestDTO();
-        dto.setSenderName("Entity Test");
-        dto.setSenderEmail("entity@test.com");
-        dto.setCommissionType(CommissionType.FULLBODY);
-        dto.setArtstyleType(ArtstyleType.RENDER);
-        dto.setAdditionalNotes("Entity notes");
-
-        when(commissionRepository.save(any(CommissionRequest.class)))
-                .thenAnswer(invocation -> {
-                    CommissionRequest savedCommission = invocation.getArgument(0);
-                    savedCommission.setId(2L);
-                    return savedCommission;
-                });
-
-        commissionService.createCommission(dto);
-
-        ArgumentCaptor<CommissionRequest> captor =
-                ArgumentCaptor.forClass(CommissionRequest.class);
-
-        verify(commissionRepository).save(captor.capture());
-
-        CommissionRequest capturedEntity = captor.getValue();
-
-        assertEquals("Entity Test", capturedEntity.getSenderName());
-        assertEquals("entity@test.com", capturedEntity.getSenderEmail());
-        assertEquals(CommissionType.FULLBODY, capturedEntity.getCommissionType());
-        assertEquals(ArtstyleType.RENDER, capturedEntity.getArtstyleType());
-        assertEquals("Entity notes", capturedEntity.getAdditionalNotes());
-    }
-
-    @Test
-    void createCommissionShouldSendWebSocketNotification() {
-        CommissionRequestDTO dto = new CommissionRequestDTO();
-        dto.setSenderName("Socket User");
-        dto.setSenderEmail("socket@test.com");
-        dto.setCommissionType(CommissionType.HEADSHOT);
-        dto.setArtstyleType(ArtstyleType.SKETCH);
-        dto.setAdditionalNotes("WebSocket test");
-
-        when(commissionRepository.save(any(CommissionRequest.class)))
-                .thenAnswer(invocation -> {
-                    CommissionRequest savedCommission = invocation.getArgument(0);
-                    savedCommission.setId(3L);
-                    return savedCommission;
-                });
-
-        commissionService.createCommission(dto);
-
-        verify(messagingTemplate, times(1))
-                .convertAndSend(eq("/topic/commissions"), any(CommissionRequestDTO.class));
-    }
-
-    @Test
-    void getAllCommissionsShouldReturnCommissionList() {
-        CommissionRequest commission = new CommissionRequest(
-                "User",
-                "user@test.com",
-                CommissionType.HEADSHOT,
-                ArtstyleType.SKETCH,
-                "Notes"
-        );
-        commission.setId(4L);
-
-        when(commissionRepository.findAll())
-                .thenReturn(List.of(commission));
+    public void testGetAllCommissions() {
+        CommissionRequest entity = new CommissionRequest("User", "u@e.com", CommissionType.HEADSHOT, ArtstyleType.SKETCH, "hi");
+        when(commissionRepository.findAll()).thenReturn(Collections.singletonList(entity));
 
         List<CommissionRequestDTO> result = commissionService.getAllCommissions();
 
         assertEquals(1, result.size());
-        assertEquals(4L, result.get(0).getId());
         assertEquals("User", result.get(0).getSenderName());
-        assertEquals("user@test.com", result.get(0).getSenderEmail());
         assertEquals(CommissionType.HEADSHOT, result.get(0).getCommissionType());
         assertEquals(ArtstyleType.SKETCH, result.get(0).getArtstyleType());
     }
 
     @Test
-    void getAllCommissionsWithPageableShouldReturnPagedResults() {
-        CommissionRequest commission = new CommissionRequest(
-                "Paged User",
-                "paged@test.com",
-                CommissionType.HALFBODY,
-                ArtstyleType.SIMPLE,
-                "Paged notes"
-        );
-        commission.setId(5L);
+    public void testGetAllCommissionsWithPageable() {
+        CommissionRequest e1 = new CommissionRequest("A", "a@e.com", CommissionType.HEADSHOT, ArtstyleType.SKETCH, "n");
+        e1.setId(5L);
+        List<CommissionRequest> list = Collections.singletonList(e1);
+        Pageable pageable = PageRequest.of(0, 10);
+        when(commissionRepository.findAll(pageable)).thenReturn(new PageImpl<>(list, pageable, 1));
 
-        PageRequest pageable = PageRequest.of(0, 10);
+        var page = commissionService.getAllCommissions(pageable);
 
-        when(commissionRepository.findAll(pageable))
-                .thenReturn(new PageImpl<>(List.of(commission), pageable, 1));
-
-        var result = commissionService.getAllCommissions(pageable);
-
-        assertEquals(1, result.getTotalElements());
-        assertEquals(1, result.getContent().size());
-        assertEquals(5L, result.getContent().get(0).getId());
-        assertEquals("Paged User", result.getContent().get(0).getSenderName());
+        assertEquals(1, page.getTotalElements());
+        assertEquals(1, page.getContent().size());
+        assertEquals(5L, page.getContent().get(0).getId());
     }
 
     @Test
-    void getCommissionShouldReturnCommissionWhenFound() {
-        CommissionRequest commission = new CommissionRequest(
-                "Found User",
-                "found@test.com",
-                CommissionType.FULLBODY,
-                ArtstyleType.PAINTING,
-                "Found notes"
-        );
-        commission.setId(42L);
+    public void testGetCommissionFound() {
+        CommissionRequest entity = new CommissionRequest("Found", "f@e.com", CommissionType.HALFBODY, ArtstyleType.SKETCH, "ok");
+        entity.setId(42L);
+        when(commissionRepository.findById(42L)).thenReturn(Optional.of(entity));
 
-        when(commissionRepository.findById(42L))
-                .thenReturn(Optional.of(commission));
+        CommissionRequestDTO dto = commissionService.getCommission(42L);
 
-        CommissionRequestDTO result = commissionService.getCommission(42L);
-
-        assertEquals(42L, result.getId());
-        assertEquals("Found User", result.getSenderName());
-        assertEquals("found@test.com", result.getSenderEmail());
-        assertEquals(CommissionType.FULLBODY, result.getCommissionType());
-        assertEquals(ArtstyleType.PAINTING, result.getArtstyleType());
+        assertEquals(42L, dto.getId());
+        assertEquals("Found", dto.getSenderName());
+        assertEquals(CommissionType.HALFBODY, dto.getCommissionType());
     }
 
     @Test
-    void getCommissionShouldThrowResourceNotFoundExceptionWhenMissing() {
-        when(commissionRepository.findById(99L))
-                .thenReturn(Optional.empty());
+    public void testGetCommissionNotFound() {
+        when(commissionRepository.findById(99L)).thenReturn(Optional.empty());
 
-        assertThrows(ResourceNotFoundException.class, () -> {
+        Assertions.assertThrows(io.bootify.vcore.rest.ResourceNotFoundException.class, () -> {
             commissionService.getCommission(99L);
         });
     }
+        @Test
+        public void testGetCommissionNotFound2() {
+            when(commissionRepository.findById(88L)).thenReturn(Optional.empty());
+
+            Assertions.assertThrows(io.bootify.vcore.rest.ResourceNotFoundException.class, () -> {
+                commissionService.getCommission(88L);
+            });
+        }
+
+            @Test
+            public void testGetCommissionNotFound3() {
+                when(commissionRepository.findById(67L)).thenReturn(Optional.empty());
+
+                Assertions.assertThrows(io.bootify.vcore.rest.ResourceNotFoundException.class, () -> {
+                    commissionService.getCommission(67L);
+                });
+            }
+
+       @Test
+                public void testGetCommissionNotFound4() {
+                    when(commissionRepository.findById(69L)).thenReturn(Optional.empty());
+
+                    Assertions.assertThrows(io.bootify.vcore.rest.ResourceNotFoundException.class, () -> {
+                        commissionService.getCommission(69L);
+                    });
+                }
+
 }
